2008-02-16  Nikolaus Schaller <hns@computer.org>
	* fixed issue with committing data source too late
	* improved correctness of frameLoadDelegate calls
	* reduced debug NSLog()

2008-02-10 17:31-EST Gregory John Casamento <greg_casamento@yahoo.com>

    NOTE (Nikolaus Schaller <hns@computer.org>): this appears to be a bug in GNUstep-GUI

	* Sources/WebView.m: Corrected calls to viewWillMove... to include
	calls to the super-class version of it.  Fixes issue observed by
	myself and Riccardo.  Document Window for both SWKBrowser and Vespucci
	was failing to load properly.

2008-02-10 16:01-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Sources/GNUmakefile: Additional correction.

2008-02-08  Nikolaus Schaller <hns@computer.org>
	* added History and Back/Forward list plus some stubs for a page cache (should cache WebFrame/WebFrameViews)
	* fixed bugs with finalizing loading (e.g. update history after loading jpg or pngs)
	* made (X)(HT)ML parser more robust for embedded spaces and newlinws e.g. <img src = "url" / >
	
2008-01-18 17:21-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Sources/GNUmakefile: Fixed makefile issue.

2008-01-17  Riccardo Mottola <riccardo@kaffe.org>
	* Sources/WebHTMLDocumentView.m: improved <HR> draw code
	* Sources/DOMHTML.m: parse of shade and size attributes
	
2008-01-16 16:22-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Sources/DOMHTML.m: Added code to add a newline for a <p> element.

2008-01-03  Riccardo Mottola <riccardo@kaffe.org>
	* Sources/DOMHtml.m: removed non-apple hack
	
2007-12-31  Nikolaus Schaller <hns@computer.org>
	* fixed bugs in entities table
	* added preliminary handling for <li>
	
2007-12-17  Nikolaus Schaller <hns@computer.org>
	* improved scroller handling
	
2007-11-20  Riccardo Mottola <riccardo@kaffe.org>
	* Sources/GNUmakefile: added WebPreferences
	
2007-10-13  Nikolaus Schaller <hns@computer.org>