@@ -1,6 +1,7 @@
 include $(GNUSTEP_MAKEFILES)/common.make
 
 PACKAGE_NAME=SimpleWebKit
+FRAMEWORK_NAME=SimpleWebKit
 VERSION = 0.1
 
 SUBPROJECTS = Sources
