@@ -119,7 +119,9 @@
 	return NIMP;
 }
 
-- (DOMNode *) firstChild; { return (_childNodes && [_childNodes length] > 0)?[_childNodes item:0]:nil; }
+- (DOMNode *) firstChild; { 
+  return ((_childNodes != nil) && ([_childNodes length] > 0))?((DOMNode *)[_childNodes item:0]) : (DOMNode *)nil; 
+}
 
 - (BOOL) hasAttributes; { return NO; }
 
@@ -139,7 +141,10 @@
 
 - (BOOL) isSupported:(NSString *) feature :(NSString *) version; { return NO; }
 
-- (DOMNode *) lastChild; { return (_childNodes && [_childNodes length] > 0)?[_childNodes item:[_childNodes length]-1]:nil; }
+- (DOMNode *) lastChild { 
+  return ((_childNodes != nil) && ([_childNodes length] > 0))?
+    (DOMNode *)[_childNodes item:[_childNodes length]-1]: (DOMNode *)nil; 
+}
 
 - (NSString *) localName; { return @"local name"; }
 
